--- a/templates/reg.html
+++ b/templates/reg.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
+<link href="static/style.css" rel="stylesheet" type="text/css"/>
 <title>Регистрация</title>
 {% endblock %}
 
