--- a/static/general.css
+++ b/static/general.css
@@ -1,3 +1,4 @@
+
 html, body {
   height: 100%;
   overflow: auto;
@@ -23,14 +24,19 @@ html, body {
   height: 100% !important;
 }
 .chat {
-  white-space: pre-line;
   overflow-y: auto !important;
   scrollbar-width: thin;
-  padding-left: 1rem !important;
-  padding-bottom: 0.5rem !important;
-  padding-right: 0.5rem !important;
-  height: calc(95% - 2rem) !important;
+  padding: 0 0.5rem 0 0.5rem !important;
+  height: calc(90% - 2rem) !important;
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  display: flex;
+  flex-direction: column-reverse;
+}
+.user {
+  float: right;
+}
+.profile {
+  float: left;
 }
 .btn:focus {
   outline: 0;
@@ -52,6 +58,42 @@ html, body {
 .container {
   padding: 0;
   height: 100%;
+}
+.profile_info {
+  height: 5%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  padding: auto !important;
+  display: flex;
+  align-items: center;
+  padding-left: 0.5rem;
+}
+.message_box {
+  width: 100%;
+  height: auto !important;
+  margin-bottom: 1rem;
+}
+p {
+  white-space: pre-line;
+  margin: 0;
+  overflow-wrap: break-word;
+}
+.message {
+  white-space: pre-line;
+  margin: 0;
+  overflow-wrap: break-word;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 10px;
+  padding: 0.3rem 0.7rem 0.3rem 0.7rem;
+  width: auto;
+  max-width: 85%;
+  min-width: 5%;
+}
+#start {
+  border: none;
+  width: 100% !important;
+  max-width: none;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
 }
 .col-4, .col-8 {
   height: 100%;
