--- a/templates/message.html
+++ b/templates/message.html
@@ -18,7 +18,7 @@
               <li><a class="dropdown-item" href="#">Find friends</a></li>
               <li><a class="dropdown-item" href="#">Settings</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Log Out</a></li>
+              <li><a class="dropdown-item" href="{{ '/logout' }}">Log Out</a></li>
               </ul>
           </div>
       </nav>
