--- a/templates/message.html
+++ b/templates/message.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Messenger</a>
               <a class="nav-link dropdown-toggle" href="#" id="navbarMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Username
+                {{ current_user.name }}
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarMenuLink">
               <li><a class="dropdown-item" href="#">Find friends</a></li>
