--- a/templates/message.html
+++ b/templates/message.html
@@ -16,6 +16,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarMenuLink">
               <li><a class="dropdown-item" href="#">Find friends</a></li>
+              <li><a class="dropdown-item" href="#">Friends</a></li>
               <li><a class="dropdown-item" href="#">Settings</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="{{ '/logout' }}">Log Out</a></li>
