--- a/templates/reg.html
+++ b/templates/reg.html
@@ -10,7 +10,7 @@
 <div class="d-flex align-items-center">
     <div class="container">
         <form action="" method="POST">
-                <h1>Регистрация</h1>
+                <h1>Registration</h1>
                  {{ form.hidden_tag() }}
                  {{ form.csrf_token }}
 
