--- a/static/general.css
+++ b/static/general.css
@@ -40,7 +40,7 @@ html, body {
 }
 .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0 rgba(13, 110, 253, 0.25);
+  box-shadow: none !important;
 }
 .input-group {
   align-items: center !important;
@@ -172,4 +172,52 @@ p {
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
+}
+
+
+
+h1 {
+  margin: 1rem 0 1rem 0;
+  text-align: center;
+}
+.fre {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 10px;
+  margin: 0 5% 1rem 5%;
+  width: auto;
+  height: 85%;
+}
+.col {
+  border-right: 1px solid rgba(0, 0, 0, 0.125);
+  padding: 0;
+  height: 100%;
+}
+.col:last-child {
+  border: none;
+}
+.list-group-flush {
+  padding: 0;
+  overflow-y: auto;
+  scrollbar-width: thin;
+}
+.first_list {
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  height: 89.70%;
+}
+.second_list {
+  height: 100%;
+}
+.third_list {
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  height: 90%;
+}
+h4 {
+  height: 10%;
+  margin: 0;
+  padding-top: 1rem;
+  text-align: center;
+}
+.icons {
+  float: right;
+  margin-left: 1rem;
 }
