--- a/templates/message.html
+++ b/templates/message.html
@@ -2,7 +2,7 @@
 
 {% block title %}
 <link href="static/general.css" rel="stylesheet" type="text/css"/>
-
+<script src="https://kit.fontawesome.com/35d7e61ee3.js" crossorigin="anonymous"></script>
 <title>Главная</title>
 {% endblock %}
 {% block body %}
@@ -16,7 +16,7 @@
                 ID: {{ current_user.id }}
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarMenuLink">
-              <li><a class="dropdown-item" href="#">Friends</a></li>
+              <li><a class="dropdown-item" href="/friends">Friends</a></li>
               <li><a class="dropdown-item" href="#">Friend requests </a></li>
               <li><a class="dropdown-item" href="#">Find friends</a></li>
               <li><a class="dropdown-item" href="#">Settings</a></li>
@@ -29,10 +29,10 @@
 <div class="row">
   <div class="col-4">
     <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action" id="list-profile4-list" data-bs-toggle="list" href="#list-profile4" role="tab" aria-controls="profile4">profile4<span class="badge bg-dark">4</span></a>
-      <a class="list-group-item list-group-item-action" id="list-profile1-list" data-bs-toggle="list" href="#list-profile1" role="tab" aria-controls="profile1">Profile1<span class="badge bg-dark">1</span></a>
-      <a class="list-group-item list-group-item-action" id="list-profile2-list" data-bs-toggle="list" href="#list-profile2" role="tab" aria-controls="profile2">profile2<span class="badge bg-dark">2</span></a>
-      <a class="list-group-item list-group-item-action" id="list-profile3-list" data-bs-toggle="list" href="#list-profile3" role="tab" aria-controls="profile3">profile3<span class="badge bg-dark">3</span></a>
+      <a class="list-group-item list-group-item-action" id="list-profile4-list" data-bs-toggle="list" href="#list-profile4" role="tab" aria-controls="profile4">profile4<span class="badge bg-dark rounded-pill">4</span></a>
+      <a class="list-group-item list-group-item-action" id="list-profile1-list" data-bs-toggle="list" href="#list-profile1" role="tab" aria-controls="profile1">Profile1<span class="badge bg-dark rounded-pill">1</span></a>
+      <a class="list-group-item list-group-item-action" id="list-profile2-list" data-bs-toggle="list" href="#list-profile2" role="tab" aria-controls="profile2">profile2<span class="badge bg-dark rounded-pill">2</span></a>
+      <a class="list-group-item list-group-item-action" id="list-profile3-list" data-bs-toggle="list" href="#list-profile3" role="tab" aria-controls="profile3">profile3<span class="badge bg-dark rounded-pill">3</span></a>
     </div>
   </div>
   <div class="col-8">
@@ -65,7 +65,7 @@
           </div>
           <div class="input-group">
           <input type="text" class="form-control" placeholder="Соблаговолите написать письмо.." aria-label="Write a message" aria-describedby="button-addon4">
-          <button class="btn btn-outline-secondary" type="submit" id="button-addon4">Send</button>
+          <button class="btn btn-outline-secondary" type="submit" id="button-addon4"><i class="fas fa-envelope"></i></button>
           </div>
           </div>
       </div>
@@ -97,7 +97,7 @@
           </div>
           <div class="input-group">
           <input type="text" class="form-control" placeholder="Соблаговолите написать письмо.." aria-label="Write a message" aria-describedby="button-addon1">
-          <button class="btn btn-outline-secondary" type="submit" id="button-addon1">Send</button>
+          <button class="btn btn-outline-secondary" type="submit" id="button-addon1"><i class="fas fa-envelope"></i></button>
           </div>
           </div>
       </div>
@@ -129,7 +129,7 @@
             </div>
             <div class="input-group">
             <input type="text" class="form-control" placeholder="Соблаговолите написать письмо.." aria-label="Write a message" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Send</button>
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i class="fas fa-envelope"></i></button>
             </div>
             </div>
       </div>
@@ -161,7 +161,7 @@
             </div>
             <div class="input-group">
             <input type="text" class="form-control" placeholder="Соблаговолите написать письмо.." aria-label="Write a message" aria-describedby="button-addon3">
-            <button class="btn btn-outline-secondary" type="submit" id="button-addon3">Send</button>
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon3"><i class="fas fa-envelope"></i></button>
             </div>
             </div>
       </div>
