--- a/templates/friends.html
+++ b/templates/friends.html
@@ -8,81 +8,29 @@
 {% block body %}
 <h1>Friends</h1>
 <div class="row fre">
+
     <div class="col col-4">
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Find friends..." aria-label="Find friends" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
         </div>
+
         <ul class="list-group-flush first_list">
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
+            <li class="list-group-item">Вова<a class="icons" href="#"><i class="fas fa-user-plus"></i></a></li>
         </ul>
+
     </div>
+
     <div class="col col-5">
         <ul class="list-group-flush second_list">
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
+            <li class="list-group-item">Костя<a class="icons" href="#"><i class="fas fa-envelope"></i></a><a class="icons" href="#"><i class="fas fa-user-minus"></i></a></li>
         </ul>
     </div>
+
     <div class="col">
         <h4>Requests</h4>
         <ul class="list-group-flush third_list">
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">An item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A second item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A third item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">A fourth item<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
-            <li class="list-group-item">And a fifth one<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
+            <li class="list-group-item">Сава<a class="icons" href="#"><i class="fas fa-user-check"></i></a></li>
         </ul>
     </div>
 </div>
