--- a/templates/message.html
+++ b/templates/message.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="container message-box"><div class="message" id="start">Начало диалога</div></div>
           </div>
-          <div class="input-group">
+          <div class="input-group msg-field">
           <input type="text" class="form-control" placeholder="Соблаговолите написать письмо.." aria-label="Write a message" aria-describedby="button-addon4">
           <button class="btn btn-outline-secondary" type="submit" id="button-addon4"><i class="fas fa-envelope"></i></button>
           </div>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="container message-box"><div class="message" id="start">Начало диалога</div></div>
           </div>
-          <div class="input-group">
+          <div class="input-group msg-field">
           <input type="text" class="form-control" placeholder="Соблаговолите написать письмо.." aria-label="Write a message" aria-describedby="button-addon1">
           <button class="btn btn-outline-secondary" type="submit" id="button-addon1"><i class="fas fa-envelope"></i></button>
           </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="container message-box"><div class="message" id="start">Начало диалога</div></div>
             </div>
-            <div class="input-group">
+            <div class="input-group msg-field">
             <input type="text" class="form-control" placeholder="Соблаговолите написать письмо.." aria-label="Write a message" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i class="fas fa-envelope"></i></button>
             </div>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="container message-box"><div class="message" id="start">Начало диалога</div></div>
             </div>
-            <div class="input-group">
+            <div class="input-group msg-field">
             <input type="text" class="form-control" placeholder="Соблаговолите написать письмо.." aria-label="Write a message" aria-describedby="button-addon3">
             <button class="btn btn-outline-secondary" type="submit" id="button-addon3"><i class="fas fa-envelope"></i></button>
             </div>
