--- a/static/style.css
+++ b/static/style.css
@@ -41,11 +41,8 @@ body {
 form {
   margin: 10%;
 }
-.mb-3 {
-  margin-bottom: 2%;
-}
 .input-group {
-  margin-bottom: 5%;
+  margin-bottom: 1rem;
 }
 input {
   -webkit-animation: "hello-world" 1s forwards;
@@ -60,4 +57,7 @@ span {
 }
 h1 {
   margin-bottom: 5%;
+}
+#error_enter {
+  margin-top: 1rem;
 }
